# kz-bz-kiro

./: .env.example  .gitignore  .prettierignore  .prettierrc.js  .yamllint.yml  Makefile  README.md  VERCEL_DEPLOYMENT.md  docker-compose.yml  package-lock.json  package.json  render.yaml  render.yml  test-frontend-api.js  vercel.json
.github/: dependabot.yml  (+2 more)
backend/: .coverage  .env.development  .env.production.example  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  Dockerfile.production  alembic.ini  coverage.xml  init.sql  pyproject.toml  render.yaml  render.yml  requirements.production.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_admin_table.py  75cadcbcfeb8_変更内容の説明.py  abffa78d850d_変更内容の説明.py
backend/app/: Dockerfile  __init__.py  config.py  main.py  main_simple.py
backend/app/api/: auth.py  monitoring.py
backend/app/api/admin/: contact_management.py
backend/app/api/endpoints/: contact.py
backend/app/api/schemas/: contact.py
backend/app/contact/domain/: contact.py  mail_template.txt  settings.json
backend/app/contact/infrastructure/: t_contact_repository.py
backend/app/contact/interface/: router.py
backend/app/contact/usecase/: contact.py
backend/app/core/: api_security.py  config_production.py  database.py  database_security.py  logging.py
backend/app/domain/: __init__.py  admin.py  contact.py  settings.json
backend/app/domain/entities/: __init__.py  contact.py
backend/app/domain/events/: __init__.py  base.py  contact_events.py
backend/app/domain/repositories/: contact_repository.py
backend/app/domain/value_objects/: __init__.py  email.py  phone.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  connection.py
backend/app/infrastructure/di/: __init__.py  container.py
backend/app/infrastructure/event_bus/: __init__.py  event_bus.py  handlers.py  in_memory_event_bus.py
backend/app/infrastructure/event_handlers/: __init__.py  contact_handlers.py
backend/app/interface/: router.py
backend/app/middleware/: error_handling.py  security.py
backend/app/services/: __init__.py  alert_service.py  auth_service.py  contact_service.py  email_service.py  health_check_service.py  uptime_monitor.py
backend/app/utils/: event_bus.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py  test_auth.py  test_main.py
backend/tests/api/: test_contact.py  test_contact_endpoints.py
backend/tests/domain/: test_contact_entity.py  test_contact_events.py  test_email_value_object.py  test_phone_value_object.py  test_value_objects.py
backend/tests/infrastructure/: __init__.py  test_database_models.py  test_di_container.py  test_event_bus.py
backend/tests/integration/: test_contact_flow.py  test_full_system.py
backend/tests/performance/: test_performance.py
backend/tests/security/: test_security.py
backend/tests/services/: test_contact_service.py  test_email_service.py
backend/tests/unit/: test_main.py
(+237 files in other folders)
